infra/operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diom
  namespace: diom
  annotations:
    tailscale.com/hostname: diom-dev-euw1
    tailscale.com/tags: "tag:k8s-dev"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: diom
                port:
                  number: 8080
